# Config-Validator-Library

./: README.md  pyproject.toml
.github/workflows/: ci.yml  tests.yml
config_validator/: __init__.py  __main__.py  cli.py  exceptions.py  parser.py  schema.py  validator.py
examples/: advanced_config.toml  advanced_example.py  basic_config.json  complex_config.yaml  complex_schema.py  schema_example.py
tests/: test_parser.py  test_schema.py  test_validator.py
