[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "config-validator"
version = "0.1.0"
description = "A lightweight configuration validation library."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    "PyYAML>=6.0",
    "toml>=0.10.2"
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]